feat:course till gradient descent

--- a/lesson_3/4-Data_preprocesing.ipynb
+++ b/lesson_3/4-Data_preprocesing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "22812f9a-3e8a-4883-9420-d3323709fa3f",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "1ff8eb0f-04a8-4997-a070-5fc586f8aa97",
    "metadata": {},
    "outputs": [
@@ -33,7 +33,7 @@
        "       [ 3.3,  8. ,  nan]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "3f1a1598-75c4-4c14-8f54-981ca5ecf619",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
        "array([False, False, False,  True])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "93719ce6-fec3-4381-9504-2353e7aafcec",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "array([3])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "300478b0-58f4-4d0f-a88c-634ecf9cbf8b",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
        "       [nan,  8., nan]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "dba5009d-fac8-45ff-8d66-8a7d41f0964a",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
        "       [-1.,  8., -1.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,9 +198,7 @@
   {
    "cell_type": "markdown",
    "id": "ead0559a-9360-4ac7-9996-6b7476c33a55",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Imputation\n",
     "It is the process of filling missing data using various statistical means"
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "1162c2f5-48c0-4864-be61-ce966c9b9302",
    "metadata": {},
    "outputs": [],
@@ -231,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "id": "b8cbb240-41f7-4c49-b85d-33e70d774eb2",
    "metadata": {},
    "outputs": [
@@ -241,7 +239,7 @@
        "array([2.5, 6. , 7.5])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "4f9575ca-2abd-4ff0-b948-d5282a2c795d",
    "metadata": {},
    "outputs": [
@@ -266,7 +264,7 @@
        "       [ True, False,  True]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "131c59f2-9709-47a4-8108-2f399d00bd09",
    "metadata": {},
    "outputs": [
@@ -288,18 +286,39 @@
        "array([2, 1, 0, 0, 2])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.where(nan_indices)[1]"
+    "np.where(nan_indices)[1]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "2a9db63c-929f-4912-8158-3970e5358cb1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.5, 6. , 2.5, 2.5, 7.5])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.take(column_means, np.where(nan_indices)[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ddf652ab-8c4b-4324-a491-2f95c7088083",
    "metadata": {},
    "outputs": [],
@@ -310,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "36e2fbc7-b392-4b58-9206-34aaf382d272",
    "metadata": {},
    "outputs": [
@@ -323,7 +342,7 @@
        "       [2.5, 8. , 7.5]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "id": "789c15fa-4554-4555-acac-5f32bd74ee7f",
    "metadata": {},
    "outputs": [
@@ -352,7 +371,7 @@
        "array([2.5, 8. , 7.5])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 33,
    "id": "e951ce9b-4d23-4b61-b8e7-99747882c40d",
    "metadata": {},
    "outputs": [
@@ -377,7 +396,7 @@
        "       [ True, False,  True]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "id": "54bd73ab-890b-4e02-8783-1acdd2f4d2a4",
    "metadata": {},
    "outputs": [
@@ -402,7 +421,7 @@
        "       [2.5, 8. , 7.5]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "id": "4c0a0dfe-ad20-41e8-98fa-548d8b0ba853",
    "metadata": {},
    "outputs": [
@@ -437,7 +456,7 @@
        "array([ 4,  8, 15, 21, 21, 24, 25, 28, 34])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "id": "33a83c03-56e5-4342-9120-910913078141",
    "metadata": {},
    "outputs": [
@@ -459,7 +478,7 @@
        "array([ 4,  8, 15, 21, 21, 24, 25, 28, 34])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "id": "0edaf9ed-db47-4b98-b1db-9a1b5a69de9a",
    "metadata": {},
    "outputs": [],
@@ -484,20 +503,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "id": "45389a4a-88f6-452f-9b67-d4a7706d339b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 3\n",
-      "3 6\n",
-      "6 9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bin_list = []\n",
     "for i in range(bin_size):\n",
@@ -510,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 39,
    "id": "cc2f59c3-0021-48e6-952c-6a01291cd152",
    "metadata": {},
    "outputs": [
@@ -520,7 +529,7 @@
        "[array([ 4,  8, 15]), array([21, 21, 24]), array([25, 28, 34])]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 40,
    "id": "39a96151-0dc7-420f-b97c-b816d8fdfbf4",
    "metadata": {},
    "outputs": [
@@ -543,7 +552,7 @@
        "       [25, 28, 34]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 45,
    "id": "47d5c1fa-a349-4041-95fd-4e085668c132",
    "metadata": {},
    "outputs": [
@@ -579,7 +588,7 @@
        "       [29.]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "id": "227f9fd8-a440-4369-bfa3-ae87245e26b1",
    "metadata": {},
    "outputs": [],
@@ -613,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "id": "fb98ebe1-cc19-4973-9327-1f589bfc4baf",
    "metadata": {},
    "outputs": [
@@ -625,7 +634,7 @@
        "       [29., 29., 29.]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 48,
    "id": "53809375-5510-4762-a157-e03d686b0a4c",
    "metadata": {},
    "outputs": [
@@ -701,7 +710,7 @@
        "       975, 978, 981, 984, 987, 990, 993, 996, 999])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 49,
    "id": "a78f164c-09c8-478e-bea6-10b071f6cd07",
    "metadata": {},
    "outputs": [],
@@ -725,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 50,
    "id": "10245538-d679-4e13-99d8-16ac581c958f",
    "metadata": {},
    "outputs": [],
@@ -735,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 51,
    "id": "c6302c17-7a7b-4139-9a6d-d8c92e99f113",
    "metadata": {},
    "outputs": [
@@ -811,7 +820,7 @@
        "        0.98198198,  0.98798799,  0.99399399,  1.        ])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
