--- a/lesson_3/3.1-pipeline_assignment.ipynb
+++ b/lesson_3/3.1-pipeline_assignment.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c6637b1a-d9ac-487b-a135-40cf450e3547",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0bc92cbf-ee25-4b00-8140-d2c0c2e5f7a1",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
        "       [891.    ,   0.    ,   3.    , ...,   7.75  ,      nan,      nan]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "b2cac3de-438b-4e0a-b480-f75cf02b6682",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
        "         nan,  7.25,   nan,   nan])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "cd24b210-37c3-451c-b8af-3698da303157",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "False"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "c3c87c49-0c93-428a-b620-93fedd220630",
    "metadata": {},
    "outputs": [],
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "id": "7af50e25-4bb6-45d0-b3d3-d459fae119bd",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "False"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "6d9f7e3c-19da-44bf-a2e6-bc9a4a22b061",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "id": "9c8b9573-e7a1-4872-ae39-4271a843f025",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
    "id": "aa73e3b1-9727-4eee-b083-4e0703eb7e76",
    "metadata": {},
    "outputs": [
@@ -323,6 +323,27 @@
    "metadata": {},
    "source": [
     "## Mean, Median and Std."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "df17e87b-3e77-44a3-8df9-d8249b702757",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(891, 13)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
    ]
   },
   {
