pca-ldr, poly reg, clustering, svm, gradient decent

--- a/lesson_3/12-SVM-linear-sep.ipynb
+++ b/lesson_3/12-SVM-linear-sep.ipynb
@@ -498,7 +498,7 @@
     }
    ],
    "source": [
-    "svm_model = SVC(kernel='rbf', C=1, gamma='scale')\n",
+    "svm_model = SVC(kernel='rbf', gamma='scale')\n",
     "svm_model.fit(X_scaled, y)"
    ]
   },
